# config-formats

./: README.md  pyproject.toml
src/config_formats/: __init__.py  base.py  formats.py  simplify.py
tests/: test_base.py  test_config_formats.py  test_formats.py  test_simplify.py
