[project]
name = "config-formats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Thorsten Vitt", email = "thorsten.vitt@uni-wuerzburg.de" }]
requires-python = ">=3.11"
dependencies = [
  "bson>=0.5.10",
  "colorsaurus>=0.1.0",
  "cyclopts>=3.12.0",
  "edn-format>=0.7.5",
  "hjson>=3.1.0",
  "hocon>=0.3.0",
  "json-five>=1.1.2",
  "python-dotenv>=1.1.0",
  "python-jsonpath>=1.3.0",
  "pyyaml>=6.0.2",
  "sexpdata>=1.0.2",
  "tomli-w>=1.2.0",
  "u-msgpack-python>=2.8.0",
]

[project.scripts]
config-formats = "config_formats:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipython>=9.2.0", "pytest>=8.3.5"]


[tool.tox]
requires = ["tox>=4.25.0"]
env_list = ["3.11", "3.12", "3.13", "3.14"]

[tool.tox.env.test]
description = "run the tests with pytest"
deps = ["pytest>=8.3.5"]
commands = [["pytest", "{tty:--color=yes}", "{posargs}"]]
